--- a/new/index.html
+++ b/new/index.html
@@ -10,7 +10,7 @@
 <body>
   <header class="top-section">
     <div class="logo">LOGO</div>
-    <a href="#" class="btn">Sign in</a>
+    <a href="#" class="btn">Sign up</a>
   </header>
 
  
